--- a/gms.web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/gms.web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Mvc.Localization
 @using gms.web.Areas.Identity
 @using gms.web.Areas.Identity.Pages
 @using gms.data.Models.Identity
+
+@inject IViewLocalizer localizer;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
