--- a/gms.web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/gms.web/Areas/Identity/Pages/Account/Register.cshtml
@@ -177,7 +177,7 @@
                                     </div>
                                     <!--end::Heading-->
                                     <!--begin::Input-->
-                                    <input type="hidden" id="SubscriptionTypeId" asp-for="Input.SubscriptionTypeId" value="1" />
+                                    <input type="hidden" id="SubscriptionTypeId" asp-for="Input.SystemSubscriptionDTO.SubscriptionTypeId" value="1" />
                                     <!--end::Input-->
                                     <!--begin::Nav group-->
                                     <div class="nav-group nav-group-outline mx-auto mb-10" style="width: fit-content;" data-kt-buttons="true" data-kt-initialized="1">
@@ -202,7 +202,7 @@
                                                     <div class="d-flex align-items-center">
                                                         <!--begin::Radio-->
                                                         <div class="form-check form-check-custom form-check-solid form-check-success flex-shrink-0 me-6">
-                                                            <input class="form-check-input" id="RadioOne" type="radio" asp-for="Input.PlanId" checked="checked" value="2" />
+                                                            <input class="form-check-input" id="RadioOne" type="radio" asp-for="Input.SystemSubscriptionDTO.PlanId" checked="checked" value="2" />
                                                         </div>
                                                         <!--end::Radio-->
                                                         <!--begin::Info-->
@@ -228,7 +228,7 @@
                                                     <div class="d-flex align-items-center">
                                                         <!--begin::Radio-->
                                                         <div class="form-check form-check-custom form-check-solid form-check-success flex-shrink-0 me-6">
-                                                            <input class="form-check-input" id="RadioThree" type="radio" asp-for="Input.PlanId" value="3" />
+                                                            <input class="form-check-input" id="RadioThree" type="radio" asp-for="Input.SystemSubscriptionDTO.PlanId" value="3" />
                                                         </div>
                                                         <!--end::Radio-->
                                                         <!--begin::Info-->
@@ -254,7 +254,7 @@
                                                     <div class="d-flex align-items-center">
                                                         <!--begin::Radio-->
                                                         <div class="form-check form-check-custom form-check-solid form-check-success flex-shrink-0 me-6">
-                                                            <input class="form-check-input" id="RadioTwo" type="radio" asp-for="Input.PlanId" value="4" />
+                                                            <input class="form-check-input" id="RadioTwo" type="radio" asp-for="Input.SystemSubscriptionDTO.PlanId" value="4" />
                                                         </div>
                                                         <!--end::Radio-->
                                                         <!--begin::Info-->
