--- a/gms.web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/gms.web/Areas/Identity/Pages/Account/Register.cshtml
@@ -2,12 +2,9 @@
 @model RegisterModel
 @using System.Globalization
 @{
-    ViewData["Title"] = "SignUp";
-}
-@{
     Layout = null;
+    ViewData["Title"] = "SignUp";
     bool IsRTL = CultureInfo.CurrentCulture.Name.StartsWith("ar");
-    var test = Model;
 }
 
 <!DOCTYPE html>
@@ -153,7 +150,6 @@
                     <div class="w-lg-850px w-xl-900px p-10 p-lg-15 mx-auto">
                         <!--begin::Form-->
                         <form class="my-auto pb-5" id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                             <!--begin::Step 1-->
                             <div class="current" data-kt-stepper-element="content">
                                 <!--begin::Wrapper-->
@@ -197,12 +193,41 @@
                                             <!--begin::Tabs-->
                                             <div class="nav flex-column">
                                                 <!--begin::Tab link-->
-                                                <label class="nav-link btn btn-outline btn-outline-dashed btn-color-dark btn-active btn-active-primary d-flex flex-stack text-start p-6 active mb-6" data-bs-toggle="tab" data-bs-target="#plan_type_startup">
+                                                <label class="nav-link btn btn-outline btn-outline-dashed btn-color-dark btn-active btn-active-primary d-flex flex-stack text-start p-6 active mb-6" data-bs-toggle="tab" data-bs-target="#plan_free_trial">
                                                     <!--end::Description-->
                                                     <div class="d-flex align-items-center">
                                                         <!--begin::Radio-->
                                                         <div class="form-check form-check-custom form-check-solid form-check-success flex-shrink-0 me-6">
-                                                            <input class="form-check-input" id="RadioOne" type="radio" asp-for="Input.SystemSubscriptionDTO.PlanId" checked="checked" value="2" />
+                                                            <input class="form-check-input" id="RadioOne" type="radio" asp-for="Input.SystemSubscriptionDTO.PlanId" checked="checked" value="1" />
+                                                        </div>
+                                                        <!--end::Radio-->
+                                                        <!--begin::Info-->
+                                                        <div class="flex-grow-1">
+                                                            <div class="d-flex align-items-center fs-2 fw-bold flex-wrap">
+                                                                14 Free Trial
+                                                                <span class="badge badge-light-success ms-2 py-2 px-3 fs-7">Best</span>
+                                                            </div>
+                                                            <div class="fw-semibold opacity-75 fs-7">The best choice to start</div>
+                                                        </div>
+                                                        <!--end::Info-->
+                                                    </div>
+                                                    <!--end::Description-->
+                                                    <!--begin::Price-->
+                                                    <div class="ms-5">
+                                                        <span class="mb-2">EGP</span>
+                                                        <span class="fs-2x fw-bold" data-kt-plan-price-month="0" data-kt-plan-price-annual="0">0</span>
+                                                        <span class="fs-7 opacity-50" data-kt-plan-price-month="/ Mon" data-kt-plan-price-annual="/ Ann">/ Mon</span>
+                                                    </div>
+                                                    <!--end::Price-->
+                                                </label>
+                                                <!--end::Tab link-->
+                                                <!--begin::Tab link-->
+                                                <label class="nav-link btn btn-outline btn-outline-dashed btn-color-dark btn-active btn-active-primary d-flex flex-stack text-start p-6 mb-6" data-bs-toggle="tab" data-bs-target="#plan_type_startup">
+                                                    <!--end::Description-->
+                                                    <div class="d-flex align-items-center">
+                                                        <!--begin::Radio-->
+                                                        <div class="form-check form-check-custom form-check-solid form-check-success flex-shrink-0 me-6">
+                                                            <input class="form-check-input" id="RadioTwo" type="radio" asp-for="Input.SystemSubscriptionDTO.PlanId" value="2" />
                                                         </div>
                                                         <!--end::Radio-->
                                                         <!--begin::Info-->
@@ -254,7 +279,7 @@
                                                     <div class="d-flex align-items-center">
                                                         <!--begin::Radio-->
                                                         <div class="form-check form-check-custom form-check-solid form-check-success flex-shrink-0 me-6">
-                                                            <input class="form-check-input" id="RadioTwo" type="radio" asp-for="Input.SystemSubscriptionDTO.PlanId" value="4" />
+                                                            <input class="form-check-input" id="RadioFour" type="radio" asp-for="Input.SystemSubscriptionDTO.PlanId" value="4" />
                                                         </div>
                                                         <!--end::Radio-->
                                                         <!--begin::Info-->
@@ -281,10 +306,40 @@
                                         <!--begin::Col-->
                                         <div class="col-lg-6">
                                             <!--begin::Tab content-->
-                                            @*<div class="tab-content rounded h-100 bg-light p-10">*@
                                             <div class="tab-content rounded bg-light p-10">
                                                 <!--begin::Tab Pane-->
-                                                <div class="tab-pane fade show active" id="plan_type_startup">
+                                                <div class="tab-pane fade show active" id="plan_free_trial">
+                                                    <!--begin::Heading-->
+                                                    <div class="pb-5">
+                                                        <h2 class="fw-bold text-dark">What’s in Free Trial Plan?</h2>
+                                                    </div>
+                                                    <!--end::Heading-->
+                                                    <!--begin::Body-->
+                                                    <div class="pt-1">
+                                                        <!--begin::Item-->
+                                                        <div class="d-flex align-items-center mb-7">
+                                                            <span class="fw-semibold fs-5 text-gray-700 flex-grow-1">Up to 1 Active Branches</span>
+                                                            <i class="ki-outline ki-check-circle fs-1 text-success"></i>
+                                                        </div>
+                                                        <!--end::Item-->
+                                                        <!--begin::Item-->
+                                                        <div class="d-flex align-items-center mb-7">
+                                                            <span class="fw-semibold fs-5 text-gray-700 flex-grow-1">Up to 20 Active Staff Users</span>
+                                                            <i class="ki-outline ki-check-circle fs-1 text-success"></i>
+                                                        </div>
+                                                        <!--end::Item-->
+                                                        <!--begin::Item-->
+                                                        <div class="d-flex align-items-center">
+                                                            <span class="fw-semibold fs-5 text-gray-700 flex-grow-1">Up to 50 Active Member Users</span>
+                                                            <i class="ki-outline ki-check-circle fs-1 text-success"></i>
+                                                        </div>
+                                                        <!--end::Item-->
+                                                    </div>
+                                                    <!--end::Body-->
+                                                </div>
+                                                <!--end::Tab Pane-->
+                                                <!--begin::Tab Pane-->
+                                                <div class="tab-pane fade" id="plan_type_startup">
                                                     <!--begin::Heading-->
                                                     <div class="pb-5">
                                                         <h2 class="fw-bold text-dark">What’s in Startup Plan?</h2>
@@ -530,21 +585,55 @@
                                     <div class="col mb-5 fv-row">
                                         <label class="required form-label ms-2">@localizer["email"]</label>
                                         <input type="email" asp-for="Input.Email" class="form-control" placeholder="@localizer["enter"] @localizer["email"] @localizer["here"]" style="direction:@(IsRTL ? "rtl" : "ltr" )" />
-                                        <span asp-validation-for="Input.Email" class="text-danger"></span>
                                     </div>
                                     <!--end::Input group-->
-                                    <!--begin::Input group-->
+                                    @*<!--begin::Input group-->
                                     <div class="col mb-5 fv-row">
                                         <label class="required form-label ms-2">@localizer["password"]</label>
                                         <input type="password" asp-for="Input.Password" class="form-control" placeholder="@localizer["enter"] @localizer["password"] @localizer["here"]" />
-                                        <span asp-validation-for="Input.Password" class="text-danger"></span>
                                     </div>
-                                    <!--end::Input group-->
+                                    <!--end::Input group-->*@
+                                    <!--begin::Input group-->
+                                    <div class="col mb-5 fv-row" data-kt-password-meter="true">
+                                        <!--begin::Wrapper-->
+                                        <div class="mb-1">
+                                            <!--begin::Label-->
+                                            <label class="form-label required ms-2">
+                                                New Password
+                                            </label>
+                                            <!--end::Label-->
+                                            <!--begin::Input wrapper-->
+                                            <div class="position-relative mb-3">
+                                                <input class="form-control" type="password" asp-for="Input.Password" placeholder="@localizer["enter"] @localizer["password"] @localizer["here"]" autocomplete="off" />
+
+                                                <span class="btn btn-sm btn-icon position-absolute translate-middle top-50 end-0 me-n2" data-kt-password-meter-control="visibility">
+                                                    <i class="ki-solid ki-eye-slash fs-1"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span></i>
+                                                    <i class="ki-solid ki-eye d-none fs-1"><span class="path1"></span><span class="path2"></span><span class="path3"></span></i>
+                                                </span>
+                                            </div>
+                                            <!--end::Input wrapper-->
+                                            <!--begin::Meter-->
+                                            <div class="d-flex align-items-center mb-3" data-kt-password-meter-control="highlight">
+                                                <div class="flex-grow-1 bg-secondary bg-active-success rounded h-5px me-2"></div>
+                                                <div class="flex-grow-1 bg-secondary bg-active-success rounded h-5px me-2"></div>
+                                                <div class="flex-grow-1 bg-secondary bg-active-success rounded h-5px me-2"></div>
+                                                <div class="flex-grow-1 bg-secondary bg-active-success rounded h-5px"></div>
+                                            </div>
+                                            <!--end::Meter-->
+                                        </div>
+                                        <!--end::Wrapper-->
+                                        <!--begin::Hint-->
+                                        <div class="text-muted">
+                                            Use 8 or more characters with a mix of letters, numbers & symbols.
+                                        </div>
+                                        <!--end::Hint-->
+                                    </div>
+                                    <!--end::Input group--->
+
                                     <!--begin::Input group-->
                                     <div class="col fv-row">
                                         <label class="required form-label ms-2">Confirm Password</label>
                                         <input type="password" asp-for="Input.ConfirmPassword" class="form-control" placeholder="@localizer["enter"] @localizer["password"] Again @localizer["here"]" />
-                                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                                     </div>
                                     <!--end::Input group-->
                                 </div>
@@ -559,7 +648,7 @@
                                     </button>
                                 </div>
                                 <div>
-                                    <button type="submit" class="btn btn-lg btn-primary" data-kt-stepper-action="submit">
+                                    <button type="button" class="btn btn-lg btn-primary" data-kt-stepper-action="submit">
                                         <span class="indicator-label">
                                             Submit
                                             <i class="ki-outline ki-arrow-right fs-4 ms-2"></i>
@@ -595,74 +684,9 @@
     <!--end::Global Javascript Bundle-->
     <!--begin::Custom Javascript(used for this page only)-->
     <script type="module" src="~/assets/js/customJs/SignUp.js"></script>
-    <partial name="_ValidationScriptsPartial" />
+    @*<partial name="_ValidationScriptsPartial" />*@
     <!--end::Custom Javascript-->
     <!--end::Javascript-->
 </body>
 <!--end::Body-->
 </html>
-
-
-
-
-@* <h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-} *@
