--- a/gms.web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/gms.web/Areas/Identity/Pages/Account/Register.cshtml
@@ -521,7 +521,7 @@
                                             <label class="required form-label ms-2">Contact Number</label>
                                             <div class="input-group">
                                                 <span class="input-group-text" id="BranchContactNumber">+</span>
-                                                <input type="text" class="form-control" asp-for="Input.GymBranchDTO.ContactNumber" maxlength="10" aria-describedby="BranchContactNumber" />
+                                                <input type="text" class="form-control" asp-for="Input.GymBranchDTO.ContactNumber" maxlength="10" placeholder="@localizer["enter"] Contact Number @localizer["here"]" />
                                             </div>
                                             <!--end::Input group-->
                                         </div>
