--- a/gms.web/Views/Shared/_Header.cshtml
+++ b/gms.web/Views/Shared/_Header.cshtml
@@ -262,7 +262,7 @@
                     <!--end::Menu item-->
                     <!--begin::Menu item-->
                     <div class="menu-item px-5 my-1">
-                        <a href="../../demo39/dist/account/settings.html" class="menu-link px-5">
+                        <a href="#" class="menu-link px-5">
                             <span class="menu-title">@localizer["settings"]</span>
                         </a>
                     </div>
