--- a/gms.web/Views/Shared/_Layout.cshtml
+++ b/gms.web/Views/Shared/_Layout.cshtml
@@ -200,7 +200,7 @@
 	@* <script src="~/assets/js/custom/apps/ecommerce/catalog/save-category.js"></script> *@
 	<!--end::Custom Javascript-->
 	<!--begin::Custom Javascript-->
-	<script type="module" src="~/assets/js/customJs/custom.js"></script>
+	<script type="module" src="~/assets/js/customJs/custom.js" asp-append-version="true"></script>
 	<!--end::Custom Javascript-->
 	<!--end::Javascript-->
 	@await RenderSectionAsync("Scripts", required: false)
