--- a/gms.web/Views/Shared/_SelectLanguage.cshtml
+++ b/gms.web/Views/Shared/_SelectLanguage.cshtml
@@ -4,7 +4,7 @@
     List<SelectListItem> cultures = options.Value.SupportedUICultures
                                            .Select(c => new SelectListItem() { Value = c.Name, Text = c.NativeName })
                                            .ToList();
-    string reduirectUrl = string.IsNullOrWhiteSpace(Context.Request.Path) ? "~/" : $"~{Context.Request.Path.Value}";
+    string reduirectUrl = string.IsNullOrWhiteSpace(Context.Request.Path) ? "~/" : $"~{Context.Request.Path.Value}{Context.Request.QueryString.Value}";
 }
 
 <form id="setLanguageForm" method="post" asp-controller="Home" asp-action="SetLanguage" asp-route-redirecturl="@reduirectUrl" hidden>
@@ -86,20 +86,20 @@
 		<div class="menu-inner flex-column collapse" id="kt_app_sidebar_menu_dashboards_collapse">
             <!--begin::Menu item-->
             <div class="menu-item px-3">
-                <a href="../../demo39/dist/account/settings.html"
+                <a href="#"
                    class="menu-link d-flex px-5">
                     <span class="symbol symbol-20px me-4">
-                        <img class="rounded-1" src="assets/media/flags/spain.svg" alt="" />
+                        <img class="rounded-1" src="~/assets/media/flags/spain.svg" alt="" />
                     </span>Spanish
                 </a>
             </div>
             <!--end::Menu item-->
             <!--begin::Menu item-->
             <div class="menu-item px-3">
-                <a href="../../demo39/dist/account/settings.html"
+                <a href="#"
                    class="menu-link d-flex px-5">
                     <span class="symbol symbol-20px me-4">
-                        <img class="rounded-1" src="assets/media/flags/germany.svg" alt="" />
+                        <img class="rounded-1" src="~/assets/media/flags/germany.svg" alt="" />
                     </span>German
                 </a>
             </div>
