--- a/gms.web/wwwroot/assets/css/style.bundle.rtl.css
+++ b/gms.web/wwwroot/assets/css/style.bundle.rtl.css
@@ -38565,6 +38565,12 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     color: var(--bs-primary);
 }
 
+.menu-state-bg-light-info .menu-item.hover:not(.here) > .menu-link:not(.disabled):not(.active):not(.here), .menu-state-bg-light-info .menu-item:not(.here) .menu-link:hover:not(.disabled):not(.active):not(.here) {
+    transition: color .2s ease;
+    background-color: var(--bs-info-light);
+    color: var(--bs-info)
+}
+
     .menu-state-bg-light-primary .menu-item.hover:not(.here) > .menu-link:not(.disabled):not(.active):not(.here) .menu-title, .menu-state-bg-light-primary .menu-item:not(.here) .menu-link:hover:not(.disabled):not(.active):not(.here) .menu-title {
         color: var(--bs-primary);
     }
@@ -51364,7 +51370,7 @@ code:not([class*=language-]) {
         background-color: transparent;
     }
 
-.badge-light-primary {
+.badge-light-primary, .badge-light-male {
     color: var(--bs-primary);
     background-color: var(--bs-primary-light);
 }
@@ -51380,7 +51386,7 @@ code:not([class*=language-]) {
         background-color: transparent;
     }
 
-.badge-light-secondary {
+.badge-light-secondary, .badge-light-cancelled {
     color: var(--bs-secondary-inverse);
     background-color: var(--bs-secondary-light);
 }
@@ -51396,7 +51402,7 @@ code:not([class*=language-]) {
         background-color: transparent;
     }
 
-.badge-light-success {
+.badge-light-success, .badge-light-active, .badge-light-fullypaid {
     color: var(--bs-success);
     background-color: var(--bs-success-light);
 }
@@ -51412,7 +51418,7 @@ code:not([class*=language-]) {
         background-color: transparent;
     }
 
-.badge-light-info {
+.badge-light-info, .badge-light-partiallypaid {
     color: var(--bs-info);
     background-color: var(--bs-info-light);
 }
@@ -51428,7 +51434,7 @@ code:not([class*=language-]) {
         background-color: transparent;
     }
 
-.badge-light-warning {
+.badge-light-warning, .badge-light-suspend {
     color: var(--bs-warning);
     background-color: var(--bs-warning-light);
 }
@@ -51444,7 +51450,7 @@ code:not([class*=language-]) {
         background-color: transparent;
     }
 
-.badge-light-danger {
+.badge-light-danger, .badge-light-inactive, .badge-light-expired, .badge-light-notpaid {
     color: var(--bs-danger);
     background-color: var(--bs-danger-light);
 }
